Converted "Team Page" Icons to "Repeater"

--- a/files/call_of_duty/styles.css
+++ b/files/call_of_duty/styles.css
@@ -16,13 +16,13 @@
   position:absolute;
   z-index:0;
 }
-#u90 {
+#u70 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u90_state0 {
+#u70_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -36,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u90_state0_content {
+#u70_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -44,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u91_div {
+#u71_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u91 {
+#u71 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u91 .text {
+#u71 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u91_text {
+#u71_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u92_img {
+#u72_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u92 {
+#u72 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -98,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u92 .text {
+#u72 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u92_text {
+#u72_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u93_div {
+#u73_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u93 {
+#u73 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -143,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u93 .text {
+#u73 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u93_text {
+#u73_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u94_div {
+#u74_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -174,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u94 {
+#u74 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -187,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u94 .text {
+#u74 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u94_text {
+#u74_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u95_div {
+#u75_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -218,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u95 {
+#u75 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -231,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u95 .text {
+#u75 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u95_text {
+#u75_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u96_div {
+#u76_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -262,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u96 {
+#u76 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -275,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u96 .text {
+#u76 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u96_text {
+#u76_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u97_div {
+#u77_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u97 {
+#u77 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -319,19 +319,46 @@
   font-style:normal;
   font-size:14px;
 }
-#u97 .text {
+#u77 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u97_text {
+#u77_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u99_div {
+#u79 {
+  position:absolute;
+  left:0px;
+  top:1024px;
+}
+#u79_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u79_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u80_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -346,29 +373,29 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u99 {
+#u80 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:1024px;
+  top:0px;
   width:1024px;
   height:100px;
   display:flex;
 }
-#u99 .text {
+#u80 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u99_text {
+#u80_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u100_div {
+#u81_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -386,11 +413,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u100 {
+#u81 {
   border-width:0px;
   position:absolute;
   left:20px;
-  top:1044px;
+  top:20px;
   width:101px;
   height:18px;
   display:flex;
@@ -398,19 +425,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u100 .text {
+#u81 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u100_text {
+#u81_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u101_div {
+#u82_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,11 +455,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u101 {
+#u82 {
   border-width:0px;
   position:absolute;
   left:935px;
-  top:1044px;
+  top:20px;
   width:54px;
   height:18px;
   display:flex;
@@ -440,19 +467,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u101 .text {
+#u82 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u101_text {
+#u82_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u102_div {
+#u83_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -470,11 +497,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u102 {
+#u83 {
   border-width:0px;
   position:absolute;
   left:948px;
-  top:1067px;
+  top:43px;
   width:41px;
   height:18px;
   display:flex;
@@ -482,19 +509,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u102 .text {
+#u83 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u102_text {
+#u83_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u103_div {
+#u84_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -513,11 +540,11 @@
   font-style:normal;
   text-align:right;
 }
-#u103 {
+#u84 {
   border-width:0px;
   position:absolute;
   left:884px;
-  top:1089px;
+  top:65px;
   width:105px;
   height:18px;
   display:flex;
@@ -526,19 +553,19 @@
   font-style:normal;
   text-align:right;
 }
-#u103 .text {
+#u84 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u103_text {
+#u84_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u104_div {
+#u85_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -557,7 +584,7 @@
   font-style:normal;
   text-align:center;
 }
-#u104 {
+#u85 {
   border-width:0px;
   position:absolute;
   left:335px;
@@ -570,14 +597,14 @@
   font-style:normal;
   text-align:center;
 }
-#u104 .text {
+#u85 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u104_text {
+#u85_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
