--- a/files/home/styles.css
+++ b/files/home/styles.css
@@ -348,7 +348,34 @@
   height:716px;
   overflow:hidden;
 }
-#u11_div {
+#u11 {
+  position:absolute;
+  left:0px;
+  top:1024px;
+}
+#u11_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u11_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u12_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -363,76 +390,34 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u11 {
+#u12 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:1024px;
+  top:0px;
   width:1024px;
   height:100px;
   display:flex;
 }
-#u11 .text {
+#u12 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u11_text {
+#u12_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
-}
-#u12_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:101px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u12 {
-  border-width:0px;
-  position:absolute;
-  left:20px;
-  top:1044px;
-  width:101px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u12 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u12_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
 }
 #u13_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:54px;
+  width:101px;
   height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -448,9 +433,9 @@
 #u13 {
   border-width:0px;
   position:absolute;
-  left:935px;
-  top:1044px;
-  width:54px;
+  left:20px;
+  top:20px;
+  width:101px;
   height:18px;
   display:flex;
   font-family:'Merriweather', sans-serif;
@@ -474,7 +459,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:41px;
+  width:54px;
   height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -490,9 +475,9 @@
 #u14 {
   border-width:0px;
   position:absolute;
-  left:948px;
-  top:1067px;
-  width:41px;
+  left:935px;
+  top:20px;
+  width:54px;
   height:18px;
   display:flex;
   font-family:'Merriweather', sans-serif;
@@ -516,6 +501,48 @@
   position:absolute;
   left:0px;
   top:0px;
+  width:41px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u15 {
+  border-width:0px;
+  position:absolute;
+  left:948px;
+  top:43px;
+  width:41px;
+  height:18px;
+  display:flex;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u15 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u15_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u16_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
   width:105px;
   height:18px;
   background:inherit;
@@ -530,11 +557,11 @@
   font-style:normal;
   text-align:right;
 }
-#u15 {
+#u16 {
   border-width:0px;
   position:absolute;
   left:884px;
-  top:1089px;
+  top:65px;
   width:105px;
   height:18px;
   display:flex;
@@ -543,14 +570,14 @@
   font-style:normal;
   text-align:right;
 }
-#u15 .text {
+#u16 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u15_text {
+#u16_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
