--- a/files/leauge_of_legends/styles.css
+++ b/files/leauge_of_legends/styles.css
@@ -16,13 +16,13 @@
   position:absolute;
   z-index:0;
 }
-#u138 {
+#u121 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u138_state0 {
+#u121_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -36,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u138_state0_content {
+#u121_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -44,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u139_div {
+#u122_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u139 {
+#u122 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u139 .text {
+#u122 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u139_text {
+#u122_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u140_img {
+#u123_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u140 {
+#u123 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -98,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u140 .text {
+#u123 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u140_text {
+#u123_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u141_div {
+#u124_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u141 {
+#u124 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -143,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u141 .text {
+#u124 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u141_text {
+#u124_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u142_div {
+#u125_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -174,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u142 {
+#u125 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -187,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u142 .text {
+#u125 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u142_text {
+#u125_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u143_div {
+#u126_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -218,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u143 {
+#u126 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -231,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u143 .text {
+#u126 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u143_text {
+#u126_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u144_div {
+#u127_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -262,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u144 {
+#u127 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -275,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u144 .text {
+#u127 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u144_text {
+#u127_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u145_div {
+#u128_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u145 {
+#u128 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -319,19 +319,46 @@
   font-style:normal;
   font-size:14px;
 }
-#u145 .text {
+#u128 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u145_text {
+#u128_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u147_div {
+#u130 {
+  position:absolute;
+  left:0px;
+  top:1024px;
+}
+#u130_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u130_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u131_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -346,29 +373,29 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u147 {
+#u131 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:1024px;
+  top:0px;
   width:1024px;
   height:100px;
   display:flex;
 }
-#u147 .text {
+#u131 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u147_text {
+#u131_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u148_div {
+#u132_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -386,11 +413,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u148 {
+#u132 {
   border-width:0px;
   position:absolute;
   left:20px;
-  top:1044px;
+  top:20px;
   width:101px;
   height:18px;
   display:flex;
@@ -398,19 +425,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u148 .text {
+#u132 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u148_text {
+#u132_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u149_div {
+#u133_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,11 +455,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u149 {
+#u133 {
   border-width:0px;
   position:absolute;
   left:935px;
-  top:1044px;
+  top:20px;
   width:54px;
   height:18px;
   display:flex;
@@ -440,19 +467,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u149 .text {
+#u133 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u149_text {
+#u133_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u150_div {
+#u134_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -470,11 +497,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u150 {
+#u134 {
   border-width:0px;
   position:absolute;
   left:948px;
-  top:1067px;
+  top:43px;
   width:41px;
   height:18px;
   display:flex;
@@ -482,19 +509,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u150 .text {
+#u134 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u150_text {
+#u134_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u151_div {
+#u135_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -513,11 +540,11 @@
   font-style:normal;
   text-align:right;
 }
-#u151 {
+#u135 {
   border-width:0px;
   position:absolute;
   left:884px;
-  top:1089px;
+  top:65px;
   width:105px;
   height:18px;
   display:flex;
@@ -526,19 +553,19 @@
   font-style:normal;
   text-align:right;
 }
-#u151 .text {
+#u135 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u151_text {
+#u135_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u152_div {
+#u136_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -557,7 +584,7 @@
   font-style:normal;
   text-align:center;
 }
-#u152 {
+#u136 {
   border-width:0px;
   position:absolute;
   left:273px;
@@ -570,14 +597,14 @@
   font-style:normal;
   text-align:center;
 }
-#u152 .text {
+#u136 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u152_text {
+#u136_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
