--- a/files/melee/styles.css
+++ b/files/melee/styles.css
@@ -16,13 +16,13 @@
   position:absolute;
   z-index:0;
 }
-#u217 {
+#u205 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u217_state0 {
+#u205_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -36,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u217_state0_content {
+#u205_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -44,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u218_div {
+#u206_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u218 {
+#u206 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u218 .text {
+#u206 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u218_text {
+#u206_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u219_img {
+#u207_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u219 {
+#u207 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -98,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u219 .text {
+#u207 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u219_text {
+#u207_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u220_div {
+#u208_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u220 {
+#u208 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -143,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u220 .text {
+#u208 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u220_text {
+#u208_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u221_div {
+#u209_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -174,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u221 {
+#u209 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -187,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u221 .text {
+#u209 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u221_text {
+#u209_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u222_div {
+#u210_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -218,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u222 {
+#u210 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -231,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u222 .text {
+#u210 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u222_text {
+#u210_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u223_div {
+#u211_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -262,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u223 {
+#u211 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -275,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u223 .text {
+#u211 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u223_text {
+#u211_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u224_div {
+#u212_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u224 {
+#u212 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -319,19 +319,46 @@
   font-style:normal;
   font-size:14px;
 }
-#u224 .text {
+#u212 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u224_text {
+#u212_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u226_div {
+#u214 {
+  position:absolute;
+  left:0px;
+  top:1024px;
+}
+#u214_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u214_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u215_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -346,29 +373,29 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u226 {
+#u215 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:1024px;
+  top:0px;
   width:1024px;
   height:100px;
   display:flex;
 }
-#u226 .text {
+#u215 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u226_text {
+#u215_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u227_div {
+#u216_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -386,11 +413,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u227 {
+#u216 {
   border-width:0px;
   position:absolute;
   left:20px;
-  top:1044px;
+  top:20px;
   width:101px;
   height:18px;
   display:flex;
@@ -398,19 +425,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u227 .text {
+#u216 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u227_text {
+#u216_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u228_div {
+#u217_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,11 +455,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u228 {
+#u217 {
   border-width:0px;
   position:absolute;
   left:935px;
-  top:1044px;
+  top:20px;
   width:54px;
   height:18px;
   display:flex;
@@ -440,19 +467,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u228 .text {
+#u217 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u228_text {
+#u217_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u229_div {
+#u218_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -470,11 +497,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u229 {
+#u218 {
   border-width:0px;
   position:absolute;
   left:948px;
-  top:1067px;
+  top:43px;
   width:41px;
   height:18px;
   display:flex;
@@ -482,19 +509,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u229 .text {
+#u218 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u229_text {
+#u218_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u230_div {
+#u219_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -513,11 +540,11 @@
   font-style:normal;
   text-align:right;
 }
-#u230 {
+#u219 {
   border-width:0px;
   position:absolute;
   left:884px;
-  top:1089px;
+  top:65px;
   width:105px;
   height:18px;
   display:flex;
@@ -526,19 +553,19 @@
   font-style:normal;
   text-align:right;
 }
-#u230 .text {
+#u219 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u230_text {
+#u219_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u231_div {
+#u220_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -557,7 +584,7 @@
   font-style:normal;
   text-align:center;
 }
-#u231 {
+#u220 {
   border-width:0px;
   position:absolute;
   left:273px;
@@ -570,14 +597,14 @@
   font-style:normal;
   text-align:center;
 }
-#u231 .text {
+#u220 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u231_text {
+#u220_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
