--- a/files/rainbow_six/styles.css
+++ b/files/rainbow_six/styles.css
@@ -16,13 +16,13 @@
   position:absolute;
   z-index:0;
 }
-#u154 {
+#u138 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u154_state0 {
+#u138_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -36,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u154_state0_content {
+#u138_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -44,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u155_div {
+#u139_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u155 {
+#u139 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u155 .text {
+#u139 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u155_text {
+#u139_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u156_img {
+#u140_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u156 {
+#u140 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -98,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u156 .text {
+#u140 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u156_text {
+#u140_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u157_div {
+#u141_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u157 {
+#u141 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -143,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u157 .text {
+#u141 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u157_text {
+#u141_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u158_div {
+#u142_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -174,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u158 {
+#u142 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -187,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u158 .text {
+#u142 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u158_text {
+#u142_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u159_div {
+#u143_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -218,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u159 {
+#u143 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -231,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u159 .text {
+#u143 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u159_text {
+#u143_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u160_div {
+#u144_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -262,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u160 {
+#u144 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -275,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u160 .text {
+#u144 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u160_text {
+#u144_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u161_div {
+#u145_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u161 {
+#u145 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -319,19 +319,46 @@
   font-style:normal;
   font-size:14px;
 }
-#u161 .text {
+#u145 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u161_text {
+#u145_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u163_div {
+#u147 {
+  position:absolute;
+  left:0px;
+  top:1024px;
+}
+#u147_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u147_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u148_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -346,29 +373,29 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u163 {
+#u148 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:1024px;
+  top:0px;
   width:1024px;
   height:100px;
   display:flex;
 }
-#u163 .text {
+#u148 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u163_text {
+#u148_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u164_div {
+#u149_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -386,11 +413,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u164 {
+#u149 {
   border-width:0px;
   position:absolute;
   left:20px;
-  top:1044px;
+  top:20px;
   width:101px;
   height:18px;
   display:flex;
@@ -398,19 +425,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u164 .text {
+#u149 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u164_text {
+#u149_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u165_div {
+#u150_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,11 +455,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u165 {
+#u150 {
   border-width:0px;
   position:absolute;
   left:935px;
-  top:1044px;
+  top:20px;
   width:54px;
   height:18px;
   display:flex;
@@ -440,19 +467,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u165 .text {
+#u150 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u165_text {
+#u150_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u166_div {
+#u151_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -470,11 +497,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u166 {
+#u151 {
   border-width:0px;
   position:absolute;
   left:948px;
-  top:1067px;
+  top:43px;
   width:41px;
   height:18px;
   display:flex;
@@ -482,19 +509,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u166 .text {
+#u151 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u166_text {
+#u151_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u167_div {
+#u152_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -513,11 +540,11 @@
   font-style:normal;
   text-align:right;
 }
-#u167 {
+#u152 {
   border-width:0px;
   position:absolute;
   left:884px;
-  top:1089px;
+  top:65px;
   width:105px;
   height:18px;
   display:flex;
@@ -526,19 +553,19 @@
   font-style:normal;
   text-align:right;
 }
-#u167 .text {
+#u152 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u167_text {
+#u152_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u168_div {
+#u153_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -557,7 +584,7 @@
   font-style:normal;
   text-align:center;
 }
-#u168 {
+#u153 {
   border-width:0px;
   position:absolute;
   left:329px;
@@ -570,14 +597,14 @@
   font-style:normal;
   text-align:center;
 }
-#u168 .text {
+#u153 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u168_text {
+#u153_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
