--- a/files/rocket_leauge/styles.css
+++ b/files/rocket_leauge/styles.css
@@ -16,13 +16,13 @@
   position:absolute;
   z-index:0;
 }
-#u170 {
+#u155 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u170_state0 {
+#u155_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -36,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u170_state0_content {
+#u155_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -44,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u171_div {
+#u156_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u171 {
+#u156 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u171 .text {
+#u156 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u171_text {
+#u156_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u172_img {
+#u157_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u172 {
+#u157 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -98,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u172 .text {
+#u157 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u172_text {
+#u157_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u173_div {
+#u158_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u173 {
+#u158 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -143,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u173 .text {
+#u158 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u173_text {
+#u158_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u174_div {
+#u159_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -174,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u174 {
+#u159 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -187,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u174 .text {
+#u159 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u174_text {
+#u159_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u175_div {
+#u160_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -218,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u175 {
+#u160 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -231,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u175 .text {
+#u160 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u175_text {
+#u160_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u176_div {
+#u161_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -262,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u176 {
+#u161 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -275,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u176 .text {
+#u161 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u176_text {
+#u161_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u177_div {
+#u162_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u177 {
+#u162 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -319,19 +319,46 @@
   font-style:normal;
   font-size:14px;
 }
-#u177 .text {
+#u162 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u177_text {
+#u162_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u179_div {
+#u164 {
+  position:absolute;
+  left:0px;
+  top:1024px;
+}
+#u164_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u164_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u165_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -346,29 +373,29 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u179 {
+#u165 {
   border-width:0px;
   position:absolute;
   left:0px;
-  top:1024px;
+  top:0px;
   width:1024px;
   height:100px;
   display:flex;
 }
-#u179 .text {
+#u165 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u179_text {
+#u165_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u180_div {
+#u166_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -386,11 +413,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u180 {
+#u166 {
   border-width:0px;
   position:absolute;
   left:20px;
-  top:1044px;
+  top:20px;
   width:101px;
   height:18px;
   display:flex;
@@ -398,19 +425,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u180 .text {
+#u166 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u180_text {
+#u166_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u181_div {
+#u167_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,11 +455,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u181 {
+#u167 {
   border-width:0px;
   position:absolute;
   left:935px;
-  top:1044px;
+  top:20px;
   width:54px;
   height:18px;
   display:flex;
@@ -440,19 +467,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u181 .text {
+#u167 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u181_text {
+#u167_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u182_div {
+#u168_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -470,11 +497,11 @@
   font-weight:400;
   font-style:normal;
 }
-#u182 {
+#u168 {
   border-width:0px;
   position:absolute;
   left:948px;
-  top:1067px;
+  top:43px;
   width:41px;
   height:18px;
   display:flex;
@@ -482,19 +509,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u182 .text {
+#u168 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u182_text {
+#u168_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u183_div {
+#u169_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -513,11 +540,11 @@
   font-style:normal;
   text-align:right;
 }
-#u183 {
+#u169 {
   border-width:0px;
   position:absolute;
   left:884px;
-  top:1089px;
+  top:65px;
   width:105px;
   height:18px;
   display:flex;
@@ -526,19 +553,19 @@
   font-style:normal;
   text-align:right;
 }
-#u183 .text {
+#u169 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u183_text {
+#u169_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u184_div {
+#u170_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -557,7 +584,7 @@
   font-style:normal;
   text-align:center;
 }
-#u184 {
+#u170 {
   border-width:0px;
   position:absolute;
   left:310px;
@@ -570,14 +597,14 @@
   font-style:normal;
   text-align:center;
 }
-#u184 .text {
+#u170 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u184_text {
+#u170_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
