--- a/files/smash/styles.css
+++ b/files/smash/styles.css
@@ -16,13 +16,13 @@
   position:absolute;
   z-index:0;
 }
-#u186 {
+#u172 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u186_state0 {
+#u172_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -36,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u186_state0_content {
+#u172_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -44,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u187_div {
+#u173_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u187 {
+#u173 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u187 .text {
+#u173 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u187_text {
+#u173_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u188_img {
+#u174_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u188 {
+#u174 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -98,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u188 .text {
+#u174 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u188_text {
+#u174_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u189_div {
+#u175_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u189 {
+#u175 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -143,19 +143,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u189 .text {
+#u175 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u189_text {
+#u175_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u190_div {
+#u176_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -174,7 +174,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u190 {
+#u176 {
   border-width:0px;
   position:absolute;
   left:671px;
@@ -187,19 +187,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u190 .text {
+#u176 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u190_text {
+#u176_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u191_div {
+#u177_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -218,7 +218,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u191 {
+#u177 {
   border-width:0px;
   position:absolute;
   left:753px;
@@ -231,19 +231,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u191 .text {
+#u177 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u191_text {
+#u177_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u192_div {
+#u178_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -262,7 +262,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u192 {
+#u178 {
   border-width:0px;
   position:absolute;
   left:817px;
@@ -275,19 +275,19 @@
   font-style:normal;
   font-size:14px;
 }
-#u192 .text {
+#u178 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u192_text {
+#u178_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u193_div {
+#u179_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,7 +306,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u193 {
+#u179 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -319,19 +319,46 @@
   font-style:normal;
   font-size:14px;
 }
-#u193 .text {
+#u179 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u193_text {
+#u179_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u195_div {
+#u181 {
+  position:absolute;
+  left:0px;
+  top:0px;
+}
+#u181_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u181_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u182_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -346,7 +373,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u195 {
+#u182 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -355,20 +382,20 @@
   height:100px;
   display:flex;
 }
-#u195 .text {
+#u182 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u195_text {
+#u182_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u196_div {
+#u183_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -386,7 +413,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u196 {
+#u183 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -398,19 +425,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u196 .text {
+#u183 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u196_text {
+#u183_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u197_div {
+#u184_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,7 +455,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u197 {
+#u184 {
   border-width:0px;
   position:absolute;
   left:935px;
@@ -440,19 +467,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u197 .text {
+#u184 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u197_text {
+#u184_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u198_div {
+#u185_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -470,7 +497,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u198 {
+#u185 {
   border-width:0px;
   position:absolute;
   left:948px;
@@ -482,19 +509,19 @@
   font-weight:400;
   font-style:normal;
 }
-#u198 .text {
+#u185 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u198_text {
+#u185_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u199_div {
+#u186_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -513,7 +540,7 @@
   font-style:normal;
   text-align:right;
 }
-#u199 {
+#u186 {
   border-width:0px;
   position:absolute;
   left:884px;
@@ -526,14 +553,14 @@
   font-style:normal;
   text-align:right;
 }
-#u199 .text {
+#u186 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u199_text {
+#u186_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
