--- a/files/news/styles.css
+++ b/files/news/styles.css
@@ -16,18 +16,332 @@
   position:absolute;
   z-index:0;
 }
-#u265 {
+#u256 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
+}
+#u256_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:50px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u256_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u257_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:50px;
+  background:inherit;
+  background-color:rgba(215, 215, 215, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u257 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:50px;
+  display:flex;
+}
+#u257 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u257_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u258_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:68px;
+  height:35px;
+}
+#u258 {
+  border-width:0px;
+  position:absolute;
+  left:15px;
+  top:8px;
+  width:68px;
+  height:35px;
+  display:flex;
+}
+#u258 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u258_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u259_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:74px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u259 {
+  border-width:0px;
+  position:absolute;
+  left:934px;
+  top:15px;
+  width:74px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u259 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u259_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u260_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:62px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u260 {
+  border-width:0px;
+  position:absolute;
+  left:671px;
+  top:15px;
+  width:62px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u260 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u260_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u261_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:44px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u261 {
+  border-width:0px;
+  position:absolute;
+  left:753px;
+  top:15px;
+  width:44px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u261 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u261_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u262_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:39px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u262 {
+  border-width:0px;
+  position:absolute;
+  left:817px;
+  top:15px;
+  width:39px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u262 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u262_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u263_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:38px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u263 {
+  border-width:0px;
+  position:absolute;
+  left:876px;
+  top:15px;
+  width:38px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u263 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u263_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u265 {
+  position:absolute;
+  left:0px;
+  top:1024px;
 }
 #u265_state0 {
   position:relative;
   left:0px;
   top:0px;
   width:1024px;
-  height:50px;
+  height:100px;
   background-color:rgba(215, 215, 215, 1);
   background-image:none;
   border:none;
@@ -50,7 +364,7 @@
   left:0px;
   top:0px;
   width:1024px;
-  height:50px;
+  height:100px;
   background:inherit;
   background-color:rgba(215, 215, 215, 1);
   border:none;
@@ -65,7 +379,7 @@
   left:0px;
   top:0px;
   width:1024px;
-  height:50px;
+  height:100px;
   display:flex;
 }
 #u266 .text {
@@ -81,43 +395,13 @@
   text-transform:none;
   visibility:hidden;
 }
-#u267_img {
+#u267_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:68px;
-  height:35px;
-}
-#u267 {
-  border-width:0px;
-  position:absolute;
-  left:15px;
-  top:8px;
-  width:68px;
-  height:35px;
-  display:flex;
-}
-#u267 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u267_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u268_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:74px;
-  height:16px;
+  width:101px;
+  height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -125,23 +409,63 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
   font-style:normal;
-  font-size:14px;
+}
+#u267 {
+  border-width:0px;
+  position:absolute;
+  left:20px;
+  top:20px;
+  width:101px;
+  height:18px;
+  display:flex;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u267 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u267_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u268_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:54px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
 }
 #u268 {
   border-width:0px;
   position:absolute;
-  left:934px;
-  top:15px;
-  width:74px;
-  height:16px;
+  left:935px;
+  top:20px;
+  width:54px;
+  height:18px;
   display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
   font-style:normal;
-  font-size:14px;
 }
 #u268 .text {
   position:absolute;
@@ -160,8 +484,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:62px;
-  height:16px;
+  width:41px;
+  height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -169,23 +493,21 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
   font-style:normal;
-  font-size:14px;
 }
 #u269 {
   border-width:0px;
   position:absolute;
-  left:671px;
-  top:15px;
-  width:62px;
-  height:16px;
+  left:948px;
+  top:43px;
+  width:41px;
+  height:18px;
   display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
   font-style:normal;
-  font-size:14px;
 }
 #u269 .text {
   position:absolute;
@@ -204,8 +526,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:44px;
-  height:16px;
+  width:105px;
+  height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -213,23 +535,23 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
   font-style:normal;
-  font-size:14px;
+  text-align:right;
 }
 #u270 {
   border-width:0px;
   position:absolute;
-  left:753px;
-  top:15px;
-  width:44px;
-  height:16px;
+  left:884px;
+  top:65px;
+  width:105px;
+  height:18px;
   display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
   font-style:normal;
-  font-size:14px;
+  text-align:right;
 }
 #u270 .text {
   position:absolute;
@@ -248,301 +570,6 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:39px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u271 {
-  border-width:0px;
-  position:absolute;
-  left:817px;
-  top:15px;
-  width:39px;
-  height:16px;
-  display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u271 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u271_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u272_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:38px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u272 {
-  border-width:0px;
-  position:absolute;
-  left:876px;
-  top:15px;
-  width:38px;
-  height:16px;
-  display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u272 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u272_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u274_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1024px;
-  height:100px;
-  background:inherit;
-  background-color:rgba(215, 215, 215, 1);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u274 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:1024px;
-  width:1024px;
-  height:100px;
-  display:flex;
-}
-#u274 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u274_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u275_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:101px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u275 {
-  border-width:0px;
-  position:absolute;
-  left:20px;
-  top:1044px;
-  width:101px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u275 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u275_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u276_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:54px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u276 {
-  border-width:0px;
-  position:absolute;
-  left:935px;
-  top:1044px;
-  width:54px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u276 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u276_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u277_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:41px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u277 {
-  border-width:0px;
-  position:absolute;
-  left:948px;
-  top:1067px;
-  width:41px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u277 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u277_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u278_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:105px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-  text-align:right;
-}
-#u278 {
-  border-width:0px;
-  position:absolute;
-  left:884px;
-  top:1089px;
-  width:105px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-  text-align:right;
-}
-#u278 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u278_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u279_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
   width:169px;
   height:37px;
   background:inherit;
@@ -556,7 +583,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u279 {
+#u271 {
   border-width:0px;
   position:absolute;
   left:436px;
@@ -568,14 +595,14 @@
   font-weight:700;
   font-style:normal;
 }
-#u279 .text {
+#u271 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u279_text {
+#u271_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
