--- a/files/valorant/styles.css
+++ b/files/valorant/styles.css
@@ -16,13 +16,13 @@
   position:absolute;
   z-index:0;
 }
-#u233 {
+#u222 {
   position:fixed;
   left:50%;
   margin-left:-512px;
   top:0px;
 }
-#u233_state0 {
+#u222_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -36,7 +36,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u233_state0_content {
+#u222_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -44,7 +44,7 @@
   width:1px;
   height:1px;
 }
-#u234_div {
+#u223_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u234 {
+#u223 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,20 +68,20 @@
   height:50px;
   display:flex;
 }
-#u234 .text {
+#u223 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u234_text {
+#u223_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u235_img {
+#u224_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -89,7 +89,7 @@
   width:68px;
   height:35px;
 }
-#u235 {
+#u224 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -98,20 +98,20 @@
   height:35px;
   display:flex;
 }
-#u235 .text {
+#u224 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u235_text {
+#u224_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u236_div {
+#u225_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -130,7 +130,7 @@
   font-style:normal;
   font-size:14px;
 }
-#u236 {
+#u225 {
   border-width:0px;
   position:absolute;
   left:934px;
@@ -142,6 +142,416 @@
   font-weight:700;
   font-style:normal;
   font-size:14px;
+}
+#u225 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u225_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u226_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:62px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u226 {
+  border-width:0px;
+  position:absolute;
+  left:671px;
+  top:15px;
+  width:62px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u226 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u226_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u227_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:44px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u227 {
+  border-width:0px;
+  position:absolute;
+  left:753px;
+  top:15px;
+  width:44px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u227 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u227_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u228_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:39px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u228 {
+  border-width:0px;
+  position:absolute;
+  left:817px;
+  top:15px;
+  width:39px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u228 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u228_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u229_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:38px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u229 {
+  border-width:0px;
+  position:absolute;
+  left:876px;
+  top:15px;
+  width:38px;
+  height:16px;
+  display:flex;
+  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+}
+#u229 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u229_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u231 {
+  position:absolute;
+  left:0px;
+  top:1024px;
+}
+#u231_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background-color:rgba(215, 215, 215, 1);
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u231_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u232_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  background:inherit;
+  background-color:rgba(215, 215, 215, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u232 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1024px;
+  height:100px;
+  display:flex;
+}
+#u232 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u232_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u233_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:101px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u233 {
+  border-width:0px;
+  position:absolute;
+  left:20px;
+  top:20px;
+  width:101px;
+  height:18px;
+  display:flex;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u233 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u233_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u234_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:54px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u234 {
+  border-width:0px;
+  position:absolute;
+  left:935px;
+  top:20px;
+  width:54px;
+  height:18px;
+  display:flex;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u234 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u234_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u235_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:41px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u235 {
+  border-width:0px;
+  position:absolute;
+  left:948px;
+  top:43px;
+  width:41px;
+  height:18px;
+  display:flex;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u235 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u235_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u236_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:105px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+  text-align:right;
+}
+#u236 {
+  border-width:0px;
+  position:absolute;
+  left:884px;
+  top:65px;
+  width:105px;
+  height:18px;
+  display:flex;
+  font-family:'Merriweather', sans-serif;
+  font-weight:400;
+  font-style:normal;
+  text-align:right;
 }
 #u236 .text {
   position:absolute;
@@ -160,389 +570,6 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:62px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u237 {
-  border-width:0px;
-  position:absolute;
-  left:671px;
-  top:15px;
-  width:62px;
-  height:16px;
-  display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u237 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u237_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u238_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:44px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u238 {
-  border-width:0px;
-  position:absolute;
-  left:753px;
-  top:15px;
-  width:44px;
-  height:16px;
-  display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u238 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u238_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u239_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:39px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u239 {
-  border-width:0px;
-  position:absolute;
-  left:817px;
-  top:15px;
-  width:39px;
-  height:16px;
-  display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u239 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u239_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u240_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:38px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u240 {
-  border-width:0px;
-  position:absolute;
-  left:876px;
-  top:15px;
-  width:38px;
-  height:16px;
-  display:flex;
-  font-family:'Raleway Bold', 'Raleway Regular', 'Raleway', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:14px;
-}
-#u240 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u240_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u242_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1024px;
-  height:100px;
-  background:inherit;
-  background-color:rgba(215, 215, 215, 1);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u242 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:1024px;
-  width:1024px;
-  height:100px;
-  display:flex;
-}
-#u242 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u242_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u243_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:101px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u243 {
-  border-width:0px;
-  position:absolute;
-  left:20px;
-  top:1044px;
-  width:101px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u243 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u243_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u244_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:54px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u244 {
-  border-width:0px;
-  position:absolute;
-  left:935px;
-  top:1044px;
-  width:54px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u244 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u244_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u245_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:41px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u245 {
-  border-width:0px;
-  position:absolute;
-  left:948px;
-  top:1067px;
-  width:41px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-}
-#u245 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u245_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u246_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:105px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-  text-align:right;
-}
-#u246 {
-  border-width:0px;
-  position:absolute;
-  left:884px;
-  top:1089px;
-  width:105px;
-  height:18px;
-  display:flex;
-  font-family:'Merriweather', sans-serif;
-  font-weight:400;
-  font-style:normal;
-  text-align:right;
-}
-#u246 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u246_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u247_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
   width:302px;
   height:37px;
   background:inherit;
@@ -557,7 +584,7 @@
   font-style:normal;
   text-align:center;
 }
-#u247 {
+#u237 {
   border-width:0px;
   position:absolute;
   left:361px;
@@ -570,14 +597,14 @@
   font-style:normal;
   text-align:center;
 }
-#u247 .text {
+#u237 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u247_text {
+#u237_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
